force-app/main/default/objects/Cost__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cost associated to an Employee</description>
    <label>Employee</label>
    <referenceTo>RFAB__Employee__c</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Employee_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>