force-app/main/default/objects/Cost__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>benefits</fullName>
                <label>Benefits Costs</label>
            </value>
            <value>
                <fullName>salary</fullName>
                <label>Salary Costs</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <label>Onboarding Costs</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other Costs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>