force-app/main/default/objects/Cost__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cost related to a Job Order</description>
    <label>Job Order</label>
    <referenceTo>RFAB__Project__c</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Job_Order_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>