force-app/main/default/objects/Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Group__c</columns>
    <columns>Is_Deleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>